# RedEyeRemoval

./: CMakeLists.txt  README.md
include/: red_eye_removal.hpp
src/: main.cpp  red_eye_cpu.cpp  red_eye_cuda.cu  red_eye_openmp.cpp
